fix(shell connector): redirect stderr in the connector result
Previously, only stdin was redirected in the result, so command like
'java -version' where not available

Relates to [BS-19345](https://bonitasoft.atlassian.net/browse/BS-19345)